# napp-samples

./: .gitattributes  .gitignore  .gitmodules  README.md  grml.yaml
raw/person-detection-cpp/: BufferedChannel.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Dockerfile  MJPEGStreamer.hpp  README.md  sample.cpp
raw/person-detection-cpp/model/: person-detection-0200.xml
scripts/: grml.sh
